fixed some FindBugs findings